Fix collapsing board header

--- a/src/assets/styles/cmps/_board-controls.scss
+++ b/src/assets/styles/cmps/_board-controls.scss
@@ -125,6 +125,10 @@
     .hidden {
       display: none;
     }
+
+    .active-sort {
+      @include activeLink;
+    }
   }
 
   .filterby-img {
