--- a/src/assets/styles/pages/_board-details.scss
+++ b/src/assets/styles/pages/_board-details.scss
@@ -4,6 +4,7 @@
   overflow-x: scroll;
   padding-block-end: 50px;
   background-color: $main-bg-clr;
+  position: relative;
 
   @include for-normal-layout {
     grid-column: 1;
@@ -17,13 +18,22 @@
   //   }
   // }
 
+  .sentinel {
+    position: absolute;
+    top: 0;
+    right: 0;
+
+    width: 20px;
+    height: 50px;
+  }
+
   .sticky {
     position: sticky;
     inset: 0 auto auto 0;
     z-index: 60;
     background-color: $main-bg-clr;
     height: 185px;
-    // transition: height 0.5s;
+    transition: height 0.2s;
 
     &.header-collapsed {
       height: 133px;
